samples/_failures_safe/1761316516_00fcd7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3bada38.c: In function ‘main’:
./samples/SAFE/__tmp_b3bada38.c:146:5: error: expected expression at end of input
  146 |     add_edge(&g, 1, 2,
      |     ^~~~~~~~
./samples/SAFE/__tmp_b3bada38.c:146:5: error: expected declaration or statement at end of input
